Revert "chore: [performance] avoid calls to Arrays.asList() with at most one argument"
This reverts commit 06821d87d64c5de9139ac7122fd2c52fda82107f.