@@ -10,6 +10,7 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.InetAddress;
+import java.util.Arrays;
 import java.util.Date;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
@@ -270,7 +271,7 @@ public class MimeMessage extends MimePart {
 //    }
 
     public void setAddressHeader(String name, InternetAddress iaddr) {
-        setAddressHeader(name, iaddr == null ? null : List.of(iaddr));
+        setAddressHeader(name, iaddr == null ? null : Arrays.asList(iaddr));
     }
 
     public void setAddressHeader(String name, List<InternetAddress> iaddrs) {
