@@ -11,6 +11,7 @@ import java.net.Proxy;
 import java.net.ProxySelector;
 import java.net.SocketAddress;
 import java.net.URI;
+import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 
@@ -66,7 +67,7 @@ public final class ProxySelectors {
     public static ProxySelector dummyProxySelector() {
         return new ProxySelector() {
             public List<Proxy> select(URI uri) {
-                return List.of(Proxy.NO_PROXY);
+                return Arrays.asList(Proxy.NO_PROXY);
             }
 
             public void connectFailed(URI uri, SocketAddress sa, IOException ioe) {
