@@ -7,6 +7,7 @@ package com.zimbra.cs.store;
 
 import java.io.File;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -86,7 +87,7 @@ public class IncomingDirectory {
     }
 
     public static synchronized void setSweptDirectories(IncomingDirectory inc) {
-        IncomingDirectorySweeper.sSweptDirectories = List.of(inc);
+        IncomingDirectorySweeper.sSweptDirectories = Arrays.asList(inc);
         ZimbraLog.store.debug("Setting swept directory to %s", inc.getPath());
     }
 
